--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
         <title></title>
-        <meta http-equiv="refresh" content="0;url=http://www.chenmeifang18.com/html/index.html?pid=a3">
+        <meta http-equiv="refresh" content="0;url=http://www.chenmeifang18.com/html/register.html?pid=a3">
 </head>
 <body>
 <div style="display:none;">
 </div>
 <script>
-window.location.href="http://www.chenmeifang18.com/html/index.html?pid=a3";
+window.location.href="http://www.chenmeifang18.com/html/register.html?pid=a3";
 </script>
 </body>
 </html>
